fix: 更新yml文件AI配置信息