@@ -7,9 +7,12 @@ import com.springleaf.knowseek.model.vo.FileItemVO;
 import com.springleaf.knowseek.service.KnowledgeBaseService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -22,6 +25,16 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
     public List<FileItemVO> getFileList() {
         long userId = StpUtil.getLoginIdAsLong();
         List<FileUpload> fileUploads = fileUploadMapper.selectByUserId(userId);
-        return List.of();
+        if (fileUploads.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return fileUploads.stream()
+                .map(fileUpload -> {
+                    FileItemVO fileItemVO = new FileItemVO();
+                    BeanUtils.copyProperties(fileUpload, fileItemVO);
+                    return fileItemVO;
+                })
+                .collect(Collectors.toList());
     }
 }
